--- a/gpt.html
+++ b/gpt.html
@@ -48,7 +48,7 @@
                             Cadastro
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="formulario.php">Cadastre-se</a></li>
+                            <li><a class="dropdown-item" href="form.php">Cadastre-se</a></li>
                             <li><a class="dropdown-item" href="login.php">Login</a></li>
                             <li>
                         </ul>
